5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1712_2496.log
== TEST (2019-05-08 13:08:54) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:10:59) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:12:20) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:15:34) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:15:34) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:26:02) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 13:30:37) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- EXECUTION TIME:
0.0306132
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:30:40) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:39:36) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:49:25) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 13:50:41) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- EXECUTION TIME:
0.0278399
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 13:50:43) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:02:52) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	add = c + num
	num = int(input("numero inteiro: ")
print(add)
-- ERROR:
File "XXXX", line 8
    print(add)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:19:46) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	c = c + num
	num = int(input("numero inteiro: ")
	print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:19:49) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	c = c + num
	num = int(input("numero inteiro: ")
	print(c)
-- EXECUTION TIME:
0.0291681
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:19:53) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	c = c + num
	num = int(input("numero inteiro: ")
	print(c)
-- EXECUTION TIME:
0.0299621
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:20:19) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:20:20) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < -1:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- EXECUTION TIME:
0.0306711
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:20:29) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:20:31) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- EXECUTION TIME:
0.0297849
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:20:41) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- EXECUTION TIME:
0.028379
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:21:48) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- EXECUTION TIME:
0.0211391
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:22:17) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- EXECUTION TIME:
0.030993
-- ERROR:
Error response from daemon: Container 94049c3c8fea7ddc59493ab0ddd159e11c5ccc197443d31747a1eb3952707b9c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:22:21) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:02) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:37) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while num < lim:
	c = c + num
	num = int(input("numero inteiro: ")
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:18) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num > lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:25:31) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num > lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- EXECUTION TIME:
0.182908
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:07) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num > lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:26:18) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num > lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- EXECUTION TIME:
0.169057
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:44) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num > lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- ERROR:
File "XXXX", line 8
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:32) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num != lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:29:44) 
-- CODE:
num = int(input("numero inteiro: "))
c = 0
lim = -1

while (num != lim):
   c = c + num
   num = int(input("Numero inteiro: "))
print(c)
-- EXECUTION TIME:
0.0963311
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
